[metadata]
name = cmu_graphics-johan-mattias
version = 0.0.1
author = Johan Snider
author_email = johan.snider@gmail.com
description = CMU Graphics Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johan-mattias/cmu_graphics
project_urls =
    Bug Tracker = https://github.com/johan-mattias/cmu_graphics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = cmu_graphics
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cmu_graphics